<resources>
    <string name="app_name">Q_less</string>
    <string name="q_less_string">Q-Less.</string>
    <string name="asset_1">asset_1_3x_1</string>
    <string name="welcome_1_head">Streamline your mealtime</string>
    <string name="welcome_1_text">Say goodbye to long queues and waiting times.
                                With Q-Less, you can order your favorite meals ahead
                                of time and pick them up hassle-free.</string>
    <string name="welcome_2_head">Order from anywhere</string>
    <string name="welcome_2_text">Whether you\'re at home or on the go, our app lets
                                you browse menus and schedule pickups at your convenience.
                                Enjoy a seamless ordering experience every time.</string>
    <string name="welcome_3_head">Real-time updates</string>
    <string name="welcome_3_text">Receive instant notifications about order status,
                                pickup times, and exclusive deals. Spend less time
                                waiting and more time savoring delicious meals with Q-Less!</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="add_request">Add your request...</string>
    <string name="filter_bar">Scrollable filter bar</string>
    <string name="store1_name">McYouTwit Burgers and Fries</string>
    <string name="store1_short_details">4.3 (102) | Western | 0.2km away</string>
    <string name="store1_rating">4.3</string>
    <string name="store1_rater">102</string>
    <string name="store1_pick_up">Pick up in 11 minutes</string>
    <string name="store1_distance">0.3km away</string>
    <string name="store1_address">5 Changi Business Park Central 1, Singapore 489343</string>
    <string name="store1_menu1_title">Signature McYouTwit Burger</string>
    <string name="store1_menu1_description">Our signature burger featuring a juicy beef patty cooked to perfection, topped with melt…</string>
    <string name="store1_menu1_price">$12.80</string>
    <string name="store1_menu2_title">Signature McYouTwit Burger Combo</string>
    <string name="store1_menu2_description">Our mouthwatering signature burger paired  with a refreshing drink of your choice.</string>
    <string name="store1_menu2_price">$13.50</string>
    <string name="store1_menu3_title">Double Signature Burger Bundle</string>
    <string name="store1_menu3_description">Two mouthwatering signature burgers with your choice of sides. Perfect for sharing.</string>
    <string name="store1_menu3_price">$24.90</string>
    <string name="store1_menu4_title">Signature McYouTwit Fries in a Bucket</string>
    <string name="store1_menu4_description">Golden and crunchy on the outside, fluffy on the inside, and seasoned to perfection...</string>
    <string name="store1_menu4_price">$3.90</string>
    <string name="store1_menu1_full_description">Our signature burger featuring a juicy beef patty cooked to perfection,
                                                topped with melted cheddar cheese, crisp lettuce, ripe tomatoes, caramelized onions,
                                                and our secret special sauce, all sandwiched between a toasted brioche bun
                                                for an unforgettable taste sensation.</string>
    <string name="store2_name">Malone\'s Cones</string>
    <string name="store2_short_details">3.4 (53) | Dessert | 0.3km away</string>
    <string name="store2_rating">3.4</string>
    <string name="store2_pick_up">Pick up in 11 minutes</string>
    <string name="store2_distance">0.3km away</string>
    <string name="store2_address">5 Changi Business Park Central 1, Singapore 489343</string>
    <string name="store2_menu1_title">Special Super Matcha Scoop</string>
    <string name="store2_menu1_description">A creamy blend of premium matcha ice cream infused with Japanese ceremonial-grade matcha.</string>
    <string name="store2_menu1_price">$6.50</string>
    <string name="store2_menu2_title">Honeyed Caramel Delight</string>
    <string name="store2_menu2_description">Indulge in the decadent fusion of velvety caramel ice cream infused with the pure essence of...</string>
    <string name="store2_menu2_price">$6.00</string>
    <string name="store2_menu3_title">Berrylicious Blue Velvet Dream</string>
    <string name="store2_menu3_description">Immerse yourself in a blissful journey as creamy blueberry-infused ice cream dances on your palate. </string>
    <string name="store2_menu3_price">$6.00</string>
    <string name="store2_menu4_title">Sigature Chocolate Brownie Sundae</string>
    <string name="store2_menu4_description">It\'s like a party in your mouth – rich, decadent, and oh-so-delicious! Don\'t miss out on this scrumptious treat. </string>
    <string name="store2_menu4_price">$12.50</string>
    <string name="store2_menu1_full_description">Introducing our Special Super Matcha Scoop a creamy blend of premium matcha ice cream infused with Japanese ceremonial-grade matcha.
                                                Topped with toasted coconut, fresh strawberries, and a drizzle of golden honey, it\'s a divine indulgence in every bite. Experience matcha magic like never before.</string>
    <string name="store2_menu2_full_description">Indulge in the exquisite delight of our Caramel Honey Symphony,
                                                a decadent fusion of velvety caramel ice cream infused with the pure essence of natural honey.
                                                Each spoonful unveils a harmonious blend of rich caramel sweetness and delicate floral notes,
                                                creating a symphony of flavors that dance on your palate. Treat yourself to a luxurious culinary
                                                experience unlike any other.</string>
    <string name="store2_menu3_full_description">Immerse yourself in a blissful journey as creamy blueberry-infused ice cream dances on your palate.
                                                With each scoop, experience the vibrant burst of ripe blueberries harmonizing with the luxurious velvet texture.
                                                Indulge in this symphony of flavors for an unforgettable dessert experience.</string>
    <string name="store2_menu4_full_description">Get ready to delight your taste buds with our Signature Brownie Chocolate Symphony!
                                                    Indulge in creamy chocolate ice cream swirled with chunks of our famous brownies.
                                                    It\'s like a party in your mouth – rich, decadent, and oh-so-delicious! Don\'t miss out on this scrumptious treat.</string>
    <string name="store3_name">Ah Huat Noodle Soup</string>
    <string name="store3_short_details">4.5 (2k+) | Chinese | 0.2km away</string>
    <string name="store3_rating">4.8</string>
    <string name="store3_pick_up">Pick up in 9 minutes</string>
    <string name="store3_distance">0.2km away</string>
    <string name="store3_address">242 Simei Street 5, Singapore 544042</string>
    <string name="store3_menu1_title">Signature Beef Noodle</string>
    <string name="store3_menu1_description">Savor the warmth and flavor of our Signature Beef Noodle Soup. Tender beef, hearty vegetables, and...</string>
    <string name="store3_menu1_price">$10.50</string>
    <string name="store3_menu2_title">Mixed Seafood Rice Noodle</string>
    <string name="store3_menu2_description">Each spoonful is a symphony of flavors, warming your soul with every slurp. A taste of seaside...</string>
    <string name="store3_menu2_price">$7.50</string>
    <string name="store3_menu3_title">Duck Noodle Soup</string>
    <string name="store3_menu3_description">Savor the warmth and flavor of our Duck Noodle Soup, featuring succulent roasted duck slices... </string>
    <string name="store3_menu3_price">$7.00</string>
    <string name="store3_menu4_title">Chicken Noodle</string>
    <string name="store3_menu4_description">Savor the comforting warmth of our Chicken Noodle Soup. Tender chicken, slow-cooked overnight... </string>
    <string name="store3_menu4_price">$7.20</string>
    <string name="store3_menu5_title">Jumbo Meat Lover Bowl</string>
    <string name="store3_menu5_description">Savor the ultimate carnivore\'s delight with our Jumbo Meat Lover Bowl! Overflowing with premium meats...</string>
    <string name="store3_menu5_price">$10.50</string>
    <string name="store3_menu1_full_description">Savor the warmth and flavor of our Signature Beef Noodle Soup. Tender beef, hearty vegetables, and fragrant broth combine for a comforting bowl that\'s both satisfying and delicious.
                                                It\'s a culinary masterpiece that will keep you coming back for more.</string>
    <string name="store3_menu2_full_description">Dive into a bowl of comfort with our Mixed Seafood Rice Noodle Soup! Savory broth brimming with an assortment of fresh seafood and tender rice noodles.
                                                Each spoonful is a symphony of flavors, warming your soul with every slurp. A taste of seaside bliss in every bite.</string>
    <string name="store3_menu3_full_description">Savor the warmth and flavor of our Duck Noodle Soup, featuring succulent roasted duck slices atop a bed of tender noodles in a savory broth.</string>
    <string name="store3_menu4_full_description">Savor the comforting warmth of our Chicken Noodle Soup. Tender chicken, slow-cooked overnight,
                                                infuses our rich broth with savory goodness. Delicately seasoned and paired with hearty noodles,
                                                it\'s a bowlful of homemade comfort that will soothe your soul with every spoonful.</string>
    <string name="store3_menu5_full_description">Savor the ultimate carnivore\'s delight with our Jumbo Meat Lover Bowl! Overflowing with premium meats,
                                                    each cooked to perfection in our special sauces. Packed with fresh, high-quality ingredients,
                                                    this bowl is a carnivore\'s dream come true. Get ready for a meaty feast like no other!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_restaurant_info">RestaurantInfo</string>
</resources>