<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurant1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="260dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/store1_menu1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:layout_width="107dp"
                        android:layout_height="114dp"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/store1_menu1" />

                    <TextView
                        android:id="@+id/menu_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="5dp"
                        android:text="@string/store1_menu1_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="30dp"
                        android:text="@string/store1_menu1_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="90dp"
                        android:text="@string/store1_menu1_price" />

                    <ImageView
                        android:id="@+id/add_qnt"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="330dp"
                        android:layout_marginTop="90dp"
                        app:srcCompat="@drawable/add_to_cart" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/store1_menu2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:id="@+id/add_to_chart_12"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="330dp"
                        android:layout_marginTop="90dp"
                        app:srcCompat="@drawable/add_to_cart" />

                    <ImageView
                        android:id="@+id/store2_menu2_profile"
                        android:layout_width="107dp"
                        android:layout_height="114dp"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/store1_menu2" />

                    <TextView
                        android:id="@+id/store1_menu2_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="5dp"
                        android:text="@string/store1_menu2_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="30dp"
                        android:text="@string/store1_menu2_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="90dp"
                        android:text="@string/store1_menu2_price" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/store1_menu3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:id="@+id/add_to_chart_13"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="330dp"
                        android:layout_marginTop="90dp"
                        app:srcCompat="@drawable/add_to_cart" />

                    <ImageView
                        android:id="@+id/store2_menu3_profile"
                        android:layout_width="107dp"
                        android:layout_height="114dp"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/store1_menu3" />

                    <TextView
                        android:id="@+id/store2_menu3_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="5dp"
                        android:text="@string/store1_menu3_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="30dp"
                        android:text="@string/store1_menu3_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="90dp"
                        android:text="@string/store1_menu3_price" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/store1_menu4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:id="@+id/add_to_chart_14"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="330dp"
                        android:layout_marginTop="90dp"
                        app:srcCompat="@drawable/add_to_cart" />

                    <ImageView
                        android:id="@+id/store2_menu4_profile"
                        android:layout_width="107dp"
                        android:layout_height="114dp"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:elevation="3dp"
                        android:src="@drawable/store1_menu4" />

                    <TextView
                        android:id="@+id/store2_menu4_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="5dp"
                        android:text="@string/store1_menu4_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="30dp"
                        android:text="@string/store1_menu4_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="130dp"
                        android:paddingTop="90dp"
                        android:text="@string/store1_menu4_price" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"></LinearLayout>

            </LinearLayout>
        </ScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/store1_arrow"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateIds" />

            <ImageView
                android:id="@+id/store2_search"
                android:layout_width="77dp"
                android:layout_height="51dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="84dp"
                android:layout_height="91dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:src="@drawable/store1_burger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="148dp"
                android:src="@drawable/fav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="172dp"
                android:src="@drawable/duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="196dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pickup" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="220dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:layout_marginTop="88dp"
                android:text="@string/store1_name"
                android:textColor="@color/q_less__color"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="148dp"
                android:paddingTop="2dp"
                android:text="@string/store1_rating"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="172dp"
                android:paddingTop="2dp"
                android:text="@string/store1_pick_up"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="196dp"
                android:paddingTop="2dp"
                android:text="@string/store1_distance"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="220dp"
                android:paddingTop="2dp"
                android:text="@string/store1_address"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="154dp"
                android:text="| 102 ratings"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/q_less__color"
            android:visibility="visible"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:text="View Cart"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/current_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="85dp"
                android:paddingTop="20dp"
                android:text="(X item)"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="310dp"
                android:paddingTop="20dp"
                android:text="$XX.XX"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>